@@ -1,7 +1,14 @@
 ---
 fixtures:
   repositories:
-    concat: "https://github.com/simp/puppetlabs-concat"
+    compliance_markup:
+      repo: "https://github.com/simp/pupmod-simp-compliance_markup"
+      branch: "testing_hotfix_06062019"
+    concat:
+      # master is beyond 4.1.1, but has breaking changes to
+      # how fragments are ordered (MODULES-6625)
+      repo: https://github.com/simp/puppetlabs-concat
+      ref: 4.1.1
     pki: "https://github.com/simp/pupmod-simp-pki"
     simplib: "https://github.com/simp/pupmod-simp-simplib"
     stdlib: "https://github.com/simp/puppetlabs-stdlib"
